--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       mergeNavbar: true,
       maxLevel: 4,
       subMaxLevel: 2,
-      name: 'docsify',
+      name: 'Proton',
       search: {
         noData: {
           '/de-de/': 'Keine Ergebnisse!',
